--- a/header.html
+++ b/header.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title>IS</title>
-    <link href="CSS/header.css" rel="stylesheet" type="text/css" media="screen"/>
+    <link href="css/header.css" rel="stylesheet" type="text/css" media="screen"/>
     <link rel="stylesheet" href="//fonts.googleapis.com/css?family=Open+Sans:300,400,600,700&amp;lang=en" />
     <script src="js/scripts.js"></script>
 
