--- a/contentarea.html
+++ b/contentarea.html
@@ -22,6 +22,8 @@
         <br>
         <h4>Business Enterprise Systems</h4>
         <table id="contentarea" class="table table-hover">
+                        <thead class="thead-light">
+
             <tr>
                 <th>#</th>
                 <th>Course Title</th>
@@ -29,7 +31,7 @@
                 <th>Year</th>
                 <th></th>
             </tr>
-
+            </thead>
             <tr id="conbus1">
                 <td>19-402</td>
                 <td>Telecommunications Technology and Policy for the Internet Age</td>
@@ -86,6 +88,8 @@
 
         <h4>Computing and Information Systems &amp; Technology</h4>
         <table id="contentarea" class="table table-hover">
+                        <thead class="thead-light">
+
             <tr>
                 <th>#</th>
                 <th>Course Title</th>
@@ -93,6 +97,7 @@
                 <th>Year</th>
                 <th></th>
             </tr>
+            </thead>
 
             <tr id="concomput1">
                 <td>05-391</td>
@@ -151,6 +156,8 @@
 
         <h4>Social and Global Systems</h4>
         <table id="contentarea" class="table table-hover">
+                        <thead class="thead-light">
+
             <tr>
                 <th>#</th>
                 <th>Course Title</th>
@@ -158,6 +165,7 @@
                 <th>Year</th>
                 <th></th>
             </tr>
+            </thead>
 
             <tr id="consoc1">
                 <td>70-342</td>
@@ -214,6 +222,8 @@
 
         <h4>Quantitative Analysis</h4>
         <table id="contentarea" class="table table-hover">
+                        <thead class="thead-light">
+
             <tr>
                 <th>#</th>
                 <th>Course Title</th>
@@ -221,6 +231,7 @@
                 <th>Year</th>
                 <th></th>
             </tr>
+            </thead>
 
             <tr id="conquan1">
                 <td>21-257</td>
