--- a/professional.html
+++ b/professional.html
@@ -22,14 +22,17 @@
         <br>
         <h4>Core Courses</h4>
         <table id="professionalCore" class="table table-hover">
+            <thead class="thead-light">
+
             <tr>
                 <th>#</th>
                 <th>Course Title</th>
                 <th>Unit</th>
                 <th>Year</th>
                 <th></th>
+                    
             </tr>
-
+            </thead>
             <tr id="profcore1">
                 <td>67-250</td>
                 <td>The Information Systems Milieux</td>
@@ -132,6 +135,8 @@
         <input type="text" id="myInput" onkeyup="filterTable()" placeholder="Filter by semester"><br>
         <br>
         <table id="professionalElec" class="table table-hover">
+            <thead class="thead-light">
+
             <tr>
                 <th>#</th>
                 <th>Course Title</th>
@@ -139,6 +144,7 @@
                 <th>Semester</th>
                 <th></th>
             </tr>
+            </thead>
             <tr id="profelec1">
                 <td>19-402</td>
                 <td>Telecommunications Technology and Policy for the Internet Age</td>
@@ -165,6 +171,7 @@
                         <p>Prerequisite: 73-100</p>
                     </td>
                 </tr>
+            </tr>
 
             <tr id="profelec2">
                 <td>67-202</td>
@@ -191,6 +198,7 @@
                         <p>Prerequisites: 15-104 Min. grade C or 15-112 Min. grade C</p>
                     </td>
                 </tr>
+    </tr>
 
             <tr id="profelec4">
                 <td>67-279</td>
@@ -203,13 +211,13 @@
                         <p>Geographical Information Systems (GIS) allow us to visualize information that uses location. Through displaying layers of information in computer generated maps, we can see, analyze, understand and explore spatial patterns and relationships in new and novel ways. People in many different fields use Geographical Information Systems in their work: for visualizing the environment, human development, demographics, traffic and transportation, public health and many more. In this course, students will learn the basics of GIS through hands-on experience with popular mapping tools. Sources of data, principles of coordinate and projection systems and elementary geo-analysis techniques will be included. Upon completion of the course, students will have the background to begin using GIS techniques in their own areas of interest and will be prepared for further study in advanced GIs courses.</p>
                     </td>
                 </tr>
+    </tr>
         </table>
 
         <p><b>OR 15-xxx any Computer Science course above 15-121 with prerequisite of 15-112 or higher</b></p>
         <p><b>OR 05-xxx any Human-Computer Interaction course</b></p>
         <br>
     </div>
-
 </body>
 
 </html>
