--- a/disciplinary.html
+++ b/disciplinary.html
@@ -22,6 +22,8 @@
         <br>
         <h4>Professional Communications</h4>
         <table id="disciplinary" class="table table-hover">
+                        <thead class="thead-light">
+
             <tr>
                 <th>#</th>
                 <th>Course Title</th>
@@ -29,6 +31,7 @@
                 <th>Year</th>
                 <th></th>
             </tr>
+            </thead>
 
             <tr id="disprof1">
                 <td>35-315</td>
@@ -86,6 +89,8 @@
 
         <h4>Quantitative Methods &amp; Research Methods</h4>
         <table id="disciplinary" class="table table-hover">
+                        <thead class="thead-light">
+
             <tr>
                 <th>#</th>
                 <th>Course Title</th>
@@ -93,6 +98,7 @@
                 <th>Year</th>
                 <th></th>
             </tr>
+            </thead>
 
             <tr id="disquan1">
                 <td>21-257</td>
@@ -151,6 +157,8 @@
 
         <h4>Organizations, Policy, &amp; Social Science</h4>
         <table id="disciplinary" class="table table-hover">
+                        <thead class="thead-light">
+
             <tr>
                 <th>#</th>
                 <th>Course Title</th>
@@ -158,6 +166,7 @@
                 <th>Year</th>
                 <th></th>
             </tr>
+            </thead>
 
             <tr id="disorg1">
                 <td>08-200</td>
