--- a/index.html
+++ b/index.html
@@ -1,17 +1,16 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" >
     <link rel="stylesheet" href="css/styles.css" />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" ></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
     <script src="js/scripts.js"></script>
-    <link href="CSS/header.css" rel="stylesheet" type="styles/css" media="screen"/>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" ></script>
+
 </head>
 <body>
-    <div w3-include-html="nav.html"></div>
+    <div w3-include-html="nav.html" class="cmu"></div>
     <div w3-include-html="header.html"></div>
     <button id="professionalBtn">Professional Core</button>
     <button id="disciplinaryBtn">Disciplinary Core</button>
@@ -23,8 +22,7 @@
         <div w3-include-html="sample.html">
         </div>
     </div>
-    <div w3-include-html="footer.html"></div>
-
+    <div w3-include-html="footer.html" class="cmu"></div>
 </body>
 <script>
     profArea = $("#prof-area")
